--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Keestash</title>
     <script> window.location.href = "index.php"; </script>
     <meta content="0; URL=index.php" http-equiv="refresh">
 </head>
